--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,6 @@
   <title>Phoenix Purescript</title>
 </head>
 <body>
-  <script src="js/app.js"></script>
+  <script src="static/js/app.js"></script>
 </body>
 </html>
